2009-09-04  Steffen Ritter <info@rs-websystems.de>
	* Feautre: Introduced/Registered hook in felogin, for new "forgotPassword" handling (introduced with Core #10017)

2009-07-20  Steffen Ritter <info@rs-websystems.de>
	* Cleanup: Removed TYPO3 4.2 compatibility

2009-07-19  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Added ChangeLog file
	* Cleanup: Added short labels for extension configuration template shown in Extension Manager
	* Cleanup: Removed superfluous whitespace characters
	* Cleanup: Fixed SQL extension definition